GNOME Bugzilla – Bug 682647
girepository: Fix leak in g_vfunc_info_get_address
Last modified: 2015-02-07 17:01:38 UTC
See patch. Spotted by darkxst on IRC.
Created attachment 222377 [details] [review] girepository: Fix leak in g_vfunc_info_get_address We need to fix the struct info here.
Review of attachment 222377 [details] [review]: ::: girepository/givfuncinfo.c @@ +267,1 @@ return NULL; Doesn't this return need to change to "goto out" too?
Created attachment 222411 [details] [review] girepository: Fix leak in g_vfunc_info_get_address We need to fix the struct info here. Good catch. Not sure how I missed that.
Review of attachment 222411 [details] [review]: Looks good.
Attachment 222411 [details] pushed as 1da728f - girepository: Fix leak in g_vfunc_info_get_address
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]