girepository: Fix leak in g_vfunc_info_get_address

We need to fix the struct info here.

https://bugzilla.gnome.org/show_bug.cgi?id=682647